--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
@@ -26,12 +26,14 @@
     "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.2",
     "@babel/runtime": "7.14.0",
     "@react-native-community/eslint-config": "2.0.0",
+    "@types/styled-components": "^5.1.9",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
